tests/compile/userdata_getter_and_setter.stderr
error: at most one of `getter`, `setter`, `field` can be specified
 --> tests/compile/userdata_getter_and_setter.rs:8:5
  |
8 |     #[lua(getter, setter)]
  |     ^^^^^^^^^^^^^^^^^^^^^^
